# python-project-52

./: .flake8  .gitignore  Makefile  README.md  local_settings123145.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: pythonCI.yml
apps/labels/: tests.py  views.py
apps/labels/migrations/: 0001_initial.py
apps/main/: views.py
apps/statuses/: tests.py  views.py
apps/tasks/: filters.py  models.py  tests.py  views.py
apps/users/: models.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
labels/: tests.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: labels.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
main/: urls.py
main/templates/main/: index.html  login.html  nav_bar.html
main_page/templates/main_page/: index.html
statuses/: tests.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: delete.html  statuses.html
task_manager/: __init__.py  custom_rollbar_middleware.py  mixins.py  settings.py  urls.py  wsgi.py
task_manager/main/: urls.py
task_manager/settings/: base.py  development.py  production.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/templates/: index.html
task_manager/users/: models.py  tests.py
tasks/: filters.py  forms.py  models.py  tests.py  views.py
tasks/migrations/: 0001_initial.py
templates/main/: index.html
templates/tasks/: tasks.html
templates/users/: all_users.html  form.html
users/: forms.py  models.py  tests.py  urls.py  views.py
(+11 files in other folders)
