[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "task_manager"}]
dependencies = [
    "dj-database-url>=2.3.0",
    "django==4.2",
    "django-bootstrap5>=25.1",
    "django-debug-toolbar>=4.3.0",
    "django-filter>=25.1",
    "dotenv>=0.9.9",
    "flake8>=7.2.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
